test-harness/cmf/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cmf
  labels:
    name: cmf
