test-harness/cmf/02-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cmf
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: db-init-script
          mountPath: /docker-entrypoint-initdb.d/db_init.sql
          subPath: db_init.sql
        - name: custom-entrypoint
          mountPath: /custom-entrypoint.sh
          subPath: custom-entrypoint.sh
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -p $POSTGRES_PORT -d $POSTGRES_DB -U $POSTGRES_USER
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -p $POSTGRES_PORT -d $POSTGRES_DB -U $POSTGRES_USER
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: db-init-script
        configMap:
          name: db-init-script
          defaultMode: 0755
      - name: custom-entrypoint
        configMap:
          name: custom-entrypoint
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cmf
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
